--- a/Microsoft.Toolkit.Uwp.SampleApp/Pages/About.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Pages/About.xaml
@@ -13,7 +13,7 @@
                 <TextBlock x:Name="Version" TextAlignment="Center" Margin="0,0,0,24"/>
                 <TextBlock MaxWidth="500" TextAlignment="Center" TextWrapping="WrapWholeWords" Text="This app demonstrates the controls, services and APIs available in the UWP Community Toolkit. The toolkit is available as NuGet package for your C# or VB.NET projects. Source code of the toolkit and the sample app is available on GitHub." Margin="12,0,12,12"/>
 
-                <TextBlock Text="UWP Community Toolkit and Sample App code" TextAlignment="Center" FontWeight="SemiBold" FontSize="16"/>
+                <TextBlock Text="UWP Community Toolkit and Sample App code" TextAlignment="Center" FontWeight="SemiBold" FontSize="16" TextWrapping="Wrap"/>
                 <HyperlinkButton HorizontalAlignment="Center"
                             FontWeight="Light"
                             Foreground="{StaticResource Brush-Blue-01}"
