--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Blur/BlurBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Blur/BlurBehaviorPage.xaml
@@ -13,10 +13,10 @@
         <Image x:Name="ToolkitLogo" Source="ms-appx:///Assets/ToolkitLogo.png" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
                 <behaviors:Blur x:Name="BlurBehavior" 
-                                   BlurAmount="{Binding BlurAmount.Value, Mode=TwoWay}" 
-                                   Duration="{Binding Duration.Value, Mode=TwoWay}" 
-                                   Delay="{Binding Delay.Value, Mode=TwoWay}" 
-                                   AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
+                                   BlurAmount="{Binding BlurAmount.Value, Mode=OneWay}" 
+                                   Duration="{Binding Duration.Value, Mode=OneWay}" 
+                                   Delay="{Binding Delay.Value, Mode=OneWay}" 
+                                   AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=OneWay}"/>
             </interactivity:Interaction.Behaviors>
         </Image>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
