--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Fade/FadeBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Fade/FadeBehaviorPage.xaml
@@ -12,10 +12,10 @@
         <Image x:Name="ToolkitLogo" Source="ms-appx:///Assets/ToolkitLogo.png" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
                 <behaviors:Fade x:Name="OpacityBehavior" 
-                                   Value="{Binding Value.Value, Mode=TwoWay}" 
-                                   Duration="{Binding Duration.Value, Mode=TwoWay}" 
-                                   Delay="{Binding Delay.Value, Mode=TwoWay}" 
-                                   AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
+                                   Value="{Binding Value.Value, Mode=OneWay}" 
+                                   Duration="{Binding Duration.Value, Mode=OneWay}" 
+                                   Delay="{Binding Delay.Value, Mode=OneWay}" 
+                                   AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=OneWay}"/>
             </interactivity:Interaction.Behaviors>
         </Image>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
