--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
@@ -31,7 +31,7 @@
                         <ColumnDefinition Width="48"/>
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <Grid Background="SkyBlue" x:Name="Checkmark" Visibility="{x:Bind IsFavorite, Mode=TwoWay, Converter={StaticResource BoolToVisibilityConverter}}">
+                    <Grid Background="SkyBlue" x:Name="Checkmark" Visibility="{x:Bind IsFavorite, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
                         <SymbolIcon Symbol="Accept" Foreground="White" />
                     </Grid>
                     <TextBlock Grid.Column="1" Margin="12" VerticalAlignment="Center" FontWeight="Light" Text="{x:Bind Title}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap" FontSize="16"/>
