--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Blur/BlurBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Blur/BlurBehaviorPage.xaml
@@ -13,7 +13,7 @@
         <Image x:Name="ToolkitLogo" Source="ms-appx:///Assets/ToolkitLogo.png" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
                 <behaviors:Blur x:Name="BlurBehavior" 
-                                   BlurAmount="{Binding BlurAmount.Value, Mode=OneWay}" 
+                                   Value="{Binding Value.Value, Mode=OneWay}" 
                                    Duration="{Binding Duration.Value, Mode=OneWay}" 
                                    Delay="{Binding Delay.Value, Mode=OneWay}" 
                                    AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=OneWay}"/>
