Better ImageEx sample

--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -131,16 +131,19 @@
                 </Grid>
                 <Pivot Grid.Row="1" HeaderTemplate="{StaticResource PivotHeaderTemplate}" x:Name="InfoAreaPivot" SelectionChanged="InfoAreaPivot_OnSelectionChanged">
                     <PivotItem Header="PROPERTIES" x:Name="PropertiesPivotItem">
-                        <controlsLocal:PropertyControl x:Name="Properties"/>
+                        <Grid>
+                            <controlsLocal:PropertyControl x:Name="Properties"/>
+                            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" x:Name="CommandArea"></StackPanel>
+                        </Grid>
                     </PivotItem>
-                    
+
                     <PivotItem Header="XAML" x:Name="XamlPivotItem">
                         <controlsLocal:CodeRenderer x:Name="XamlCodeRenderer" Grid.Row="0"></controlsLocal:CodeRenderer>
                     </PivotItem>
-                    
+
                     <PivotItem Header="CODE" x:Name="CSharpPivotItem">
                         <controlsLocal:CodeRenderer x:Name="CSharpCodeRenderer" Grid.Row="0"></controlsLocal:CodeRenderer>
-                    </PivotItem>                    
+                    </PivotItem>
                 </Pivot>
             </Grid>
             <Grid x:Name="waitRing" Visibility="Collapsed" Grid.RowSpan="2" Grid.ColumnSpan="2">
