--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdaptiveGridView/AdaptiveGridViewPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdaptiveGridView/AdaptiveGridViewPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.ResponsiveGridViewPage"
+    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.AdaptiveGridViewPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -20,8 +20,8 @@
 
 
 	<Grid Background="{StaticResource Brush-Grey-05}">
-		<controls:ResponsiveGridView
-          x:Name="ResponsiveGridViewControl"
+		<controls:AdaptiveGridView
+          x:Name="AdaptiveGridViewControl"
           ItemHeight="{Binding ItemHeight.Value}"
           DesiredWidth="{Binding DesiredWidth.Value}"
           ItemTemplate="{StaticResource PhotosTemplate}"/>
