--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
@@ -27,7 +27,8 @@
 
     <Grid Background="{StaticResource Brush-Grey-05}">
         <ScrollViewer VerticalScrollBarVisibility="Auto" VerticalScrollMode="Auto">
-            <StackPanel x:Name="Container" Orientation="Vertical"></StackPanel>
+            <StackPanel x:Name="Container" Orientation="Vertical">
+            </StackPanel>
         </ScrollViewer>
     </Grid>
 </Page>
